test/method/unique_keyword_arg_names.result
{ name: 'Blether Parse Error',
  message: 'Argument name argOne repeats in method Foobar>>#one:two:',
  line: 3,
  column: 9 }
