test/method/unique_keyword_arg_names.st
Object subclass: #Foobar variables: #().

!Foobar one: argOne two: argOne
	^self!.
